changed site color turned index to testindex, resize logo

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
-    <title>DD Tech Blogr</title>
+    <title>DD Tech Blog</title>
 
     <nav>
         <div class="navbar-end">
@@ -25,7 +25,7 @@
 <body>
 
     <!--HERO IMAGE FOR HEADER-->
-    <section class="hero is-primary">
+    <section class="hero is-info">
         <div class="hero-body is-horizontal-center">
             <p class="title">
                 <a href="/homepage"><img src="./images/techlogo.png"></a>
