--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <img src="./images/ddsignin.png" alt="Sign In">
 </h2>
 <div class="container is-widescreen">
-    <div class="notification is-primary">
+    <div class="notification is-info">
         <div class="field">
             <p class="control has-icons-left has-icons-right">
                 <input class="input" type="email" placeholder="E-mail" id="emailsignin">
@@ -41,7 +41,7 @@
 
 <!-- SIGN UP FORM-->
 <div class="container is-widescreen">
-    <div class="notification is-primary">
+    <div class="notification is-info">
         <section class="names">
             <div class="field-body">
                 <div class="field">
