--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -42,26 +42,7 @@
 <!-- SIGN UP FORM-->
 <div class="container is-widescreen">
     <div class="notification is-info">
-        <section class="names">
-            <div class="field-body">
-                <div class="field">
-                    <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="First Name" id="firstfield">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-user"></i>
-                        </span>
-                    </p>
-                </div>
 
-                <div class="field">
-                    <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="Last Name" id="lastfield">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-user"></i>
-                        </span>
-                    </p>
-                </div>
-        </section>
         <div class="m-3"></div>
         <div class="field">
             <p class="control has-icons-left has-icons-right ">
@@ -104,9 +85,9 @@
 
 <script src="./js/script.js" type="text/javascript"></script>
 
-<script>
+{{!-- <script>
     $(document).ready(function () {
         // Hide the navigation button
         $('nav').hide();
     });
-</script>
+</script> --}}
