--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,88 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
-    <title>DD Tech Blog</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
+  <title>DD Tech Blog</title>
 
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  {{!-- <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-    </a> --}}
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    {{!-- <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a> --}}
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item">
-        Home
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
       </a>
+    </div>
 
-      <a class="navbar-item">
-        Dashboard
-      </a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          Home
         </a>
 
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About the Developer
-          </a>
-          <a class="navbar-item">
-            Logout
-          </a>
-        </div>
-      </div>
-    </div>
+        <a class="navbar-item">
+          Dashboard
+        </a>
 
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-info">
-            <strong>Sign up</strong>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            More
           </a>
-          <a class="button is-light">
-            Log in
-          </a>
+
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              About the Developer
+            </a>
+            {{#if logged_in}}
+            <a class="navbar-item">
+              Logout
+            </a>
+            {{else}}
+            <a class="navbar-item">
+              Login
+            </a>
+            {{/if}}
+          </div>
+        </div>
+      </div>
+
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-info">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light">
+              Log in
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 </head>
 
 <body>
 
-    <!--HERO IMAGE FOR HEADER-->
-    <section class="hero is-info">
-        <div class="hero-body is-horizontal-center">
-            <p class="title">
-                <a href="/homepage"><img src="./images/techlogo.png"></a>
-            </p>
-        </div>
-    </section>
+  <!--HERO IMAGE FOR HEADER-->
+  <section class="hero is-info">
+    <div class="hero-body is-horizontal-center">
+      <p class="title">
+        <a href="../views/homepage"><img src="./images/techlogo.png"></a>
+      </p>
+    </div>
+  </section>
 
-    {{{body}}}
+  {{{body}}}
 
-    </section>
+  </section>
 
 
-    <script src="./js/script.js" type="text/javascript"></script>
+  <script src="./js/script.js" type="text/javascript"></script>
 </body>
 <footer>
-    <a href="/dev"><img src="./images/" title="devfooter" class="developerlink">
+  <a href="/dev"><img src="./public/images/dev.png" title="devfooter" class="developerlink">
 </footer>
 
 </html>
